--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ h4,
 h5,
 h6 {
   margin: 0;
-  padding: 0
+  padding: 0;
 }
 
 /* h1,
@@ -26,25 +26,25 @@ h6 {
 } */
 
 ul {
-  list-style: none
+  list-style: none;
 }
 
 button,
 input,
 select {
-  margin: 0
+  margin: 0;
 }
 
 *,
 *::before,
 *::after {
-  box-sizing: border-box
+  box-sizing: border-box;
 }
 
 img,
 video {
   height: auto;
-  max-width: 100%
+  max-width: 100%;
 }
 
 a {
@@ -105,20 +105,20 @@ label {
   display: block;
   height: 30px;
   position: relative;
-  top: 15px
+  top: 15px;
 }
 
 label span,
 label span::before,
 label span::after {
-  content: '';
+  content: "";
   display: block;
   width: 25px;
   height: 2px;
   background: #333;
   position: absolute;
   right: 0;
-  transition: .3s;
+  transition: 0.3s;
 }
 
 label span::before {
@@ -143,6 +143,13 @@ label span::after {
   background-position: center;
   background-size: cover;
   margin-bottom: 63px;
+}
+@media (min-device-pixel-ratio: 2),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
+  .header {
+    background-image: url(img/mobile/mobile-header@2x.jpg);
+  }
 }
 
 .menu {
@@ -219,7 +226,7 @@ label span::after {
 }
 
 .button {
-  background-color: #FF4E50;
+  background-color: #ff4e50;
   border: 0px;
   padding: 13px 38px;
   border-radius: 30px;
@@ -231,7 +238,6 @@ label span::after {
   text-align: center;
   line-height: normal;
 }
-
 
 /* ====================== main ========================== */
 
@@ -258,7 +264,7 @@ label span::after {
   /* height: 210px; */
 }
 
-.partner-item>p {
+.partner-item > p {
   color: #666;
   text-align: center;
   font-family: Roboto;
@@ -267,20 +273,19 @@ label span::after {
 }
 
 .partner-item:nth-child(1) .bg-svg {
-  background-color: #FF4E50;
+  background-color: #ff4e50;
 }
 
 .partner-item:nth-child(2) .bg-svg {
-  background-color: #FFA507;
-
+  background-color: #ffa507;
 }
 
 .partner-item:nth-child(3) .bg-svg {
-  background-color: #1CD7AD;
+  background-color: #1cd7ad;
 }
 
 .partner-item:nth-child(4) .bg-svg {
-  background-color: #4E73DB;
+  background-color: #4e73db;
 }
 
 .partner-item-img {
@@ -315,14 +320,14 @@ label span::after {
 
 .other_button {
   background-color: transparent;
-  border: 2px solid #FF4E50;
+  border: 2px solid #ff4e50;
   min-height: 43px;
   min-width: 228px;
   border-radius: 30px;
   font-family: Montserrat;
   font-weight: 700;
   font-size: 14px;
-  color: #FF4E50;
+  color: #ff4e50;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -378,7 +383,6 @@ label span::after {
     flex-basis: calc((100% - 53px * 2) / 2);
   }
 }
-
 
 @media screen and (min-width: 1024px) {
   .container {
