--- a/style.css
+++ b/style.css
@@ -238,6 +238,19 @@ label span::after {
   text-align: center;
   line-height: normal;
 }
+@media screen and (min-width: 768px){
+  .header {
+    background-image: url(img/tablet/tablet-header.jpg);
+  }
+  
+}
+@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2),
+ (min-width: 768px) and (min-resolution: 192dpi),
+ (min-width: 768px) and (min-resolution: 2dppx) {
+  .header {
+    background-image: url(img/tablet/tablet-header@2x.jpg);
+  }
+}
 
 /* ====================== main ========================== */
 
