--- a/style.css
+++ b/style.css
@@ -138,7 +138,7 @@ label span::after {
   max-width: 1600px;
   width: 100vw;
   margin: 0 auto;
-  background-image: url(img/desk-header.jpg);
+  background-image: url(img/mobile/mobile-header.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -146,8 +146,8 @@ label span::after {
 }
 
 @media (min-device-pixel-ratio: 2),
-(min-resolution: 192dpi),
-(min-resolution: 2dppx) {
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
   .header {
     background-image: url(img/mobile/mobile-header@2x.jpg);
   }
@@ -244,12 +244,11 @@ label span::after {
   .header {
     background-image: url(img/tablet/tablet-header.jpg);
   }
-
 }
 
 @media screen and (min-width: 768px) and (min-device-pixel-ratio: 2),
-(min-width: 768px) and (min-resolution: 192dpi),
-(min-width: 768px) and (min-resolution: 2dppx) {
+  (min-width: 768px) and (min-resolution: 192dpi),
+  (min-width: 768px) and (min-resolution: 2dppx) {
   .header {
     background-image: url(img/tablet/tablet-header@2x.jpg);
   }
@@ -259,12 +258,11 @@ label span::after {
   .header {
     background-image: url(img/desktop/desk-header.jpg);
   }
-
 }
 
 @media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2),
-(min-width: 1200px) and (min-resolution: 192dpi),
-(min-width: 1200px) and (min-resolution: 2dppx) {
+  (min-width: 1200px) and (min-resolution: 192dpi),
+  (min-width: 1200px) and (min-resolution: 2dppx) {
   .header {
     background-image: url(img/desktop/desk-header@2x.jpg);
   }
@@ -295,7 +293,7 @@ label span::after {
   /* height: 210px; */
 }
 
-.partner-item>p {
+.partner-item > p {
   color: #666;
   text-align: center;
   font-family: Roboto;
